Fix carousel arrows z-index and Add a chapter

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 .white-arrow {
   position: absolute;
   top: 50%;
-  z-index: 9999;
+  z-index: 999;
   cursor: pointer;
   pointer-events: all;
 }
@@ -789,6 +789,9 @@ footer > p {
 
   .card {
     margin-top: 4rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+
     height: 20rem;
   }
 
